// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Hidden props 1`] = `
Object {
  "className": "css-13h683e css-1pwrqjj css-h173ik hidden fp-Box fp-Hidden",
  "hidden": true,
  "id": "test",
  "onAnimationEnd": [Function],
  "onTransitionEnd": [Function],
  "role": "region",
  "style": Object {
    "display": "none",
  },
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2.emotion-2.emotion-2 {
  display: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 hidden fp-Box fp-Hidden"
  hidden=""
  id="test"
  role="region"
  style="display: none;"
>
  Hello world
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8.emotion-8.emotion-8 {
  display: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #b3b3b3;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: gray 0px 0px 0px 1px, #a6a6a6 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-0:hover {
  background-color: #efefef;
}

.emotion-0:hover:active {
  background-color: #e3e3e3;
}

.emotion-6 {
  border-left: 4px solid #ccc;
  padding: 1rem;
}

.emotion-6:not(:last-child) {
  margin-bottom: 1rem;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-1 emotion-2 fp-Box fp-Hidden.Disclosure fp-Box fp-Button"
    tabindex="0"
    type="button"
  >
    Toggle
  </button>
  <blockquote
    class="emotion-6 emotion-1 emotion-8 emotion-3 emotion-1 emotion-8 hidden fp-Box fp-Hidden fp-Box fp-Blockquote"
    hidden=""
    id="test"
    role="region"
    style="display: none;"
  >
    Hello world
  </blockquote>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2.emotion-2.emotion-2 {
  display: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 hidden test fp-Box fp-Hidden"
  hidden=""
  role="region"
  style="display: none;"
>
  hello world
</div>
`;

exports[`overrides Hidden.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2.emotion-2.emotion-2 {
  display: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 hidden fp-Box fp-Hidden"
  hidden=""
  role="region"
  style="display: none;"
>
  hello world
</div>
`;

exports[`props renders correctly when the hidden is visible 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Hidden.Disclosure"
    tabindex="0"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Hidden"
    id="test"
    role="region"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5.emotion-5.emotion-5 {
  display: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Hidden.Disclosure"
    tabindex="0"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-0 emotion-1 emotion-5 hidden fp-Box fp-Hidden"
    hidden=""
    id="test"
    role="region"
    style="display: none;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Hidden.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2.emotion-2.emotion-2 {
  display: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 emotion-2 hidden fp-Box fp-Hidden"
  hidden=""
  role="region"
  style="display: none;"
>
  hello world
</div>
`;
